<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kbox</groupId>
    <artifactId>kbox-obfuscator</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>KBox Obfuscator</name>
    <description>ZKM-level + JNIC + VMP Java application protection system</description>

    <modules>
        <module>kbox-core</module>
        <module>kbox-cli</module>
        <module>kbox-gui</module>
        <module>kbox-maven-plugin</module>
        <module>kbox-testapp</module>
    </modules>

    <properties>
        <maven.compiler.release>8</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <asm.version>9.10.1</asm.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-commons</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-tree</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-util</artifactId>
                <version>${asm.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <!-- Use release 8 rather than source/target 8: the protected
                             runtime is injected into Java-8 targets (Minecraft 1.8.9).
                             With plain source/target, javac still links against the
                             JDK 21 platform classes and bakes in members that only
                             exist from Java 9 on, e.g. the covariant
                             ByteBuffer.rewind() that java.nio.ByteBuffer overrides
                             (Java 8 declares it on Buffer). That made the produced jar
                             die at class-init with
                             NoSuchMethodError: java.nio.ByteBuffer.rewind()Ljava/nio/ByteBuffer;
                             release 8 binds javac to the Java 8 API so such calls are
                             either rewritten or rejected at compile time. -->
                        <release>8</release>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
